force-app/main/default/objects/leaseworks__Assembly_Stage__c/leaseworks__Assembly_Stage__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Assembly Staging</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assembly Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>