force-app/main/default/objects/leaseworks__Assembly_Stage__c/fields/leaseworks__Chosen_Thrust__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Chosen_Thrust__c</fullName>
    <label>Engine Thrust (lbf)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>