force-app/main/default/objects/leaseworks__Assembly_Stage__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <description>Current status of the assembly</description>
    <inlineHelpText>Current status of the assembly</inlineHelpText>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>